<resources>
    <string name="app_name">PikeLindner</string>
    <string name="title_main">Pike Fisherman handbook</string>
    <string name="instruction">1. Выберите категорию водоёма;\n
2. Измерьте температуру воды в месте ловли;\n
3. Прочтите рекомендации по поиску щуки.
 </string>
    <string name="pond_category">Категории водоёмов:</string>
    <string name="lakes">Озера</string>
    <string name="rivers">Реки</string>
    <string name="storage_pond">Водохранилища</string>
    <string name="lake_category">Категории озёр:</string>
    <string name="river_category">Категории рек:</string>
    <string name="pond_storage_category">Категории водохранилищ:</string>
    <string name="oligotrophic">Олиготрофное</string>
    <string name="mezotrophic">Мезотрофное</string>
    <string name="evtotrophic">Эвтоотрофное</string>
    <string name="young">Молодая</string>
    <string name="midle_age">Зрелая</string>
    <string name="old">Старая</string>
    <string name="platoe">Плоскогорные</string>
    <string name="hills">На возвышенностях</string>
    <string name="oligoLakeDescription"> Молодое озеро. Олиготрофная стадия(средняя). На берегах, у подножия деревьев
       выход на поверхность коренных пород, покрытых лишайником.
       Ели, сосны и немного берёз. Небольшое количество мелководной растительности.
   Крутые, конусообразные склоны берегов. Напластования разрушенной породы.
   Выход коренных пород в котловине озера. Истощение запасов кислорода в самых глубоких местах.
       Термоклин у дна и образование отложений там же.</string>
    <string name="mezoLakeDescription"> Озеро среднего возраста. Средняя мезотрофная стадия. На берегах камни вдоль береговой линии. 1/3 сосны, 2/3 - жестколистные деревья.
    Мелководные водоросли в укрытых местах. Песок и гравий по берегам. Пологие склоны мелководий, затем обрыв.
    Крутой склон подводной части простирается до второго подводного обрыва. Термоклин обычно после второго обрыва. Присутствует большое количество отложений на дне.</string>
    <string name="evtroLakeDescription"> Старое озеро. Поздняя эвтрофная стадия. Равнинная местность. Редкие жестколиственные деревья. Густые заросли водорослей. Мелководно и почти заросло, но есть просвет. Рогоз, тростник по берегам. Песок и глина. Огромные отложения на дне.</string>
    <string name="adultRiverDescription"> Взрослая река. Этот участок реки может брать начало в горах или на равнине. Он будет собирать вод с обширных территорий таких как пограничные леса с жестколистными породами деревьев с добавлением сосны,
       окружающие сельскохозяйственные угодья. На этой стадии у реки есть максимальное число притоков, и она будет дренировать неплодородные разбросанные участки территорий.
       Источником обычно служит молодая река, но может быть и озеро, или ключ, воды которых стекают с нижней части предгорья, из песчаного или каменистого места.
       Почти нет перемежающихся потоков воды, действующих как притоки. Вода полупрозрачная и может стать очень темной во время сильных дождей, особенно в сельскохозяйственной местности или на территориях небольших городов.
       Преждевременное старение может произойти на территориях интенсивной сельскохозяйственной деятельности при высоких уровнях использования удобрений или там, где есть значительное загрязнение.
       Обычно рыба, обитающая в прохладной воде: малоротый окунь, щука, немного судака и, может быть, карпа.
       Градиент; спад составляет 1 м на милю. Глубина: 2—3 м в среднем. Глубокие и мелкие участки реки чередуются. Наличие песка и гравия.
       Бассейны, следующие за стремнинами — от 2 до 3 м со случайно встречающимися просветами от 5 до 7 м.
       Дно реки — перемежающиеся сектора гравия, песка и камней размером с кулак, редко встречаются валуны. Ила нет. Есть более мелкие разрезы с камнями, покрытыми мхом. Редкие заросли водорослей.
       Прибрежная полоса покрыта небольшими камнями, деревьями и кустарником. Редко встречаются узкие дамбы.
       На таком участке уровень питательных веществ выше, вода теплее и течение более слабое, чем в очень молодых или молодых реках. Типичны сменяющие друг друга “стремнины” и спокойные разрезы. На смену ревущим стремнинам приходят мини-стремнины (пороги).
       Увеличивается сток удобрений и вклад сточных вод. Образование дамб становится более частым и можно обнаружить случайные острова. Песчаные и каменистые отмели заметно выступают.
   </string>
    <string name="matureRiverDescription"> Зрелая река. Этот участок реки может либо возникнуть на равнинном ландшафте, либо пересекать его. Почва территории, по которой протекает река, как правило, состоит из песка и камня, могут быть и другие типы почв.
        В территорию водосбора могут входить фермерские угодья, так же как и городские промышленные территории, которые очень влияют на уровень загрязнения. На этой стадии уменьшается число притоков.
        Вода от полупрозрачной до полутемной. Во время периодов высокой воды она будет очень мутной, особенно в окружении сельскохозяйственных земель. Вода очищается после дождей обычно за 4—5 дней. Проточные водоемы с медленным течением будут поддерживать высокую температуру воды.
        Старение ускоряется из-за загрязнений, обусловленных антропогенной деятельностью.
        Судак, малоротый окунь, щука, сом, осетр.
        В больших количествах может водиться промысловая рыба такая как: судак и щука. В глубоких местах — зоны отдыха, а в болотистых заводях — места нереста щук.
        В зрелой реке водятся популяции нескольких видов промысловой рыбы: в песчаных каменистых разрезах с быстрым течением водится малоротый окунь; в более глубоких разрезах с медленным течением — судак.
        Градиент: спад 0,5—0,7 м на милю. Глубина: глубина изменяется. Некоторые участки 1,5—2 м глубины; могут быть более глубокие просветы до 5—7 м. Много мест с глубиной 2—3 м. Часто встречается глубина от 3 до 4 метров.
        Основное русло состоит главным образом из песка. Образование ила — важный фактор. Иногда строятся дамбы, влияющие на этот процесс. Есть выходы коренных пород.
        Повсюду происходит рост водных растений, повышается уровень содержания питательных веществ.
        Стремнин нет, в лучшем случае мелкие. На зрелых реках происходят наводнения. Русла рек начинают извиваться, образуются поймы. На этой стадии дамбы создают маленькие запруды. Действуют они как водохранилища. В определенное время года (обычно весной или осенью) вся промысловая рыба может скапливаться напротив плотины.
        Эта река — рай для рыбака, это первая стадия, когда появляется много промысловых рыб.
    </string>
    <string name="middleAgeRiverDescription">
    Река среднего возраста. Очень часто эта стадия начинается на сельскохозяйственных землях. Территория водосбора очень большая с высокой активностью водных растений на примыкающих к сельскохозяйственным землям площадях. Притоки — в основном взрослые реки.
        Вода: большую часть года от темной до совершенно мутной из-за взвеси, состоящей из частиц почвы и органических удобрений, использование которых возросло. Муть — постоянный фактор, обусловленный большим размером водосбора. Все это затрудняет рыбалку.
        В том месте, где река расширяется и впадает в большое озеро, происходит осаждение и качество воды временно улучшается. Щука, судак, сом. В определенных разрезах средневозрастных участков наиболее распространен какой-то один вид, что связано со структурными особенностями, даже несмотря на то, что участки проходят по одной местности.
        Судак, щука. Это река крупной щуки. Здесь разнообразие мест обитания для практически любого вида рыб. Это последняя стадия для естественного воспроизводства рыбы, обитающей в прохладной воде (щука).
        Градиент: спад 0,3—0,5 м на милю. Глубина: изменяется от мелководья (заросшие водорослями заводи с глубиной 0,3 м) до 4,5 м в ямах. Ручьи как правило до 4 м. Рядом с дамбами возможны глубины до 16 м.
        Течет главным образом по мелким отложениям каменистых и песчаных подпочв. Песок — основной материал дна реки. Время и эрозия измельчили камни и песок. Вдоль берега реки бывают выходы коренной породы. На этой стадии существуют хорошо развитые поймы, наводнения — обычное явление.
        Такая река обычно протекает по территории городов, где загрязнение может быть серьезной проблемой. Именно на этой стадии начинают проявляться последствия воздействия эррозии и загрязнения. За исключением форели и лосося, может выжить практически любая рыба. Эта река поставляет больше всего рыбы, если только она не загрязнена. Пойма может создавать топкие заводи или плоские плодородные поля.
        Русло, в котором дно очищено, пригодно для судоходства, по реке могут проходить баржи. Дамбы с пропускными устройствами обычны для таких участков рек.
    </string>
    <string name="plateauStorageDescription">
        Водохранилища плоскогорий. Щуки водятся не во всех водохранилищах, расположенных на плато и на возвышенностях. Однако, если щука есть, а водная система расположена там, где вода остается прохладной или холодной, то условия окружающей среды таковы, что имеются достаточно высокие шансы для того, чтобы щуки развелись здесь в достаточном количестве и хорошего размера.
        В некоторых водохранилищах плоскогорий довольно много щуки. Крупные щуки достигают веса более 10 кг. При нормальных условиях нереста, наличии прохладной (холодной) воды и достаточного количества корма обеспечиваются благоприятные условия для роста трофейных щук.
        В верхнем течении имеются мелководные банки. В среднем течении бухты мелководны. В верхнем течении практически нет длинных заводей. Фарватер редкопроходит вблизи берега. Затопленные острова бывают в верхнем течении. В средней части глубины 13-26 м. Фарватер проходит практически по прямой. Входы в бухты относительно широкие. В среднем течении бухты мелководны. Дальние края активных бухт закруглены.
        Высокие возвышения на берегу главного озера. Ручьи короткие. В нижнм течении глубины 25-60 м. Несколько более глубоких и длинных бухт.
    </string>
    <string name="hillsStorageDescription">
        Водохранилища на возвышенностях. При выборе водохранилища для ловли щук первым делом следует установить, — есть ли там щука вообще. В некоторых водохранилищах, расположенных на возвышенностях, тоже есть крупные щуки, хотя популяция их и не достигает значительных размеров.
        Крупная щука вырастает до 7-8 кг. Место впадения не особенно широкое. Много небольших возвышенностей. Главное русло реки редко проходит рядом с берегом.
        Много небольших возвышенностей. Внешние края бухт ни острые, ни закруглённые; средняя глубина. Основное озеро не очень широкое. Короткие каналы, заметные возвышения. Умеренно широкие внутренние заводи.
        </string>
    <string name="temperature_choosing"> Измерьте температуру воды в месте ловли для определения периода.</string>
    <string name="temperature_spinner">Температура по Цельсию, градусы </string>
    <string name="season_temperature_result">Период:</string>
    <string name="run_description">Перейти к описанию."</string>
    <string name="period_prespawn">Преднерест</string>
    <string name="period_spawn">Нерест</string>
    <string name="period_afterspawn">Посленерест</string>
    <string name="period_presummer">Предлето</string>
    <string name="period_summerpeak">Летний пик</string>
    <string name="period_summer">Лето</string>
    <string name="period_aftersummer">Послелето</string>
    <string name="period_waterreneval">Обновление воды</string>
    <string name="period_coldwater">Холодная вода</string>
    <string name="not_choosen_period">Температура не выбрана</string>
    <string name="read_final_description">Рекомендации по ловле</string>
    <string name="jan">Январь</string>
    <string name="feb">Февраль</string>
    <string name="mar">Март</string>
    <string name="apr">Апрель</string>
    <string name="may">Май</string>
    <string name="jun">Июнь</string>
    <string name="jul">Июль</string>
</resources>