<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pondsCategories"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/cover2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cover2_crop" />

    <TextView
        android:id="@+id/header"
        android:layout_width="324dp"
        android:layout_height="109dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="398dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="6"
        android:text="@string/temperature_choosing"
        android:textAlignment="viewStart"
        android:textColor="@color/teal_200"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cover2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/choose_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="6"
        android:text="@string/temperature_spinner"
        android:textAlignment="viewStart"
        android:textColor="@color/teal_200"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <Spinner
        android:id="@+id/spinnerTemp"
        android:layout_width="185dp"
        android:layout_height="22dp"


        android:layout_marginTop="20dp"
        android:background="@drawable/ic_arrow_down"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@+id/choose_temperature"
        tools:layout_editor_absoluteX="103dp" />

    <Spinner
        android:id="@+id/spinnerMonth"
        android:layout_width="160dp"
        android:layout_height="32dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTemp" />



    <TextView
        android:id="@+id/period_chosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="6"
        android:text="@string/not_choosen_period"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMonth" />

    <TextView
        android:id="@+id/read_final_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="6"
        android:text="@string/read_final_description"
        android:textAlignment="viewStart"
        android:textColor="@color/teal_200"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/period_chosen" />

    <TextView
        android:id="@+id/degreeNumber"
        android:layout_width="115dp"
        android:layout_height="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="6"
        android:text=""
        android:textAlignment="viewStart"
        android:textColor="@color/blood_red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cover2"
        app:layout_constraintVertical_bias="0.862" />

    <ImageButton
        android:id="@+id/buttonBackTempChoosing"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="28dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/read_final_description"
        app:layout_constraintVertical_bias="0.181"
        app:tint="@color/teal_200" />

    <ImageButton
        android:id="@+id/buttonFinalDescription"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="60dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_read_final_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/read_final_description"
        app:tint="@color/pastel_red" />




</androidx.constraintlayout.widget.ConstraintLayout>